@@ -1,5 +1,6 @@
-QuickUI Change Log
+QuickUI Version Log
 
+            0.7.7   Big fix to support jQuery 1.4.4.
             0.7.6   Ability to specify "tag" on Control class declaration
 04/06/10    0.7.5   Performance
             0.7.4	Bug fixes, including fixes to support IE 7.
